change the name

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="./main.css"/>
 </head>
 <body>
+    <div class="service-section">
+        <h2>At Your Service</h2>
+    <div class="sturday-themes">
+            <h2>Sturday Themes</h2>
+            <p>Our themes updated regularly to keep them bug free!</p>
+    </div>
+    <div class="up-to-date">
+            <h2>Up to Date</h2>
+            <p>All dependencies are kept current to keep thingd fresh</p>
+           
+    </div>
+    <div class="ready-to-publish">
+            <h2>Ready to Publish</h2>
+            <p>You can use this design as is,or you can make changes!</p>
+    </div>
+    <div class="made-with-love">
+            <h2>Made with love</h2>
+            <p>Is it really open source if it's not made with love?</p>
+    </div>
+    </div>
     
 </body>
 </html>
