--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./main.css"/>
+    
 </head>
 <body>
-    <div class="service-section">
-        <h2>At Your Service</h2>
-    <div class="sturday-themes">
-            <h2>Sturday Themes</h2>
+    <div  class="service-section">
+        <h2 class="service-one-heading" >At Your Service</h2>
+    <div class="service-one" >
+            <i class="fa-regular fa-gem"></i>
+            <h2 class="service-one-heading">Sturday Themes</h2>
             <p>Our themes updated regularly to keep them bug free!</p>
-    </div>
-    <div class="up-to-date">
-            <h2>Up to Date</h2>
+    </div><div class="service-one" >
+            <i class="fa-solid fa-laptop"></i>
+            <h2 class="service-one-heading">Up to Date</h2>
             <p>All dependencies are kept current to keep thingd fresh</p>
            
-    </div>
-    <div class="ready-to-publish">
-            <h2>Ready to Publish</h2>
+    </div><div class="service-one" >
+            <i class="fa-solid fa-globe"></i>
+            <h2 class="service-one-heading">Ready to Publish</h2>
             <p>You can use this design as is,or you can make changes!</p>
-    </div>
-    <div class="made-with-love">
-            <h2>Made with love</h2>
+    </div><div class="service-one" >
+            <i class="fa-regular fa-heart"></i>
+            <h2 class="service-one-heading">Made with love</h2>
             <p>Is it really open source if it's not made with love?</p>
     </div>
     </div>
